# dns2socks-c

./: .clang-format  .gitignore  CMakeLists.txt  dns2socks.sln  readme.md  readme.txt
dns2socks/: dns2socks.c  dns2socks.rc  dns2socks.vcxproj  dns2socks.vcxproj.filters  stdafx.h
